챗봇을 생=로하나더만들었다업데이트해다오

--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
       <a href="#review">고객후기</a>
       <a href="#greeting">인사말</a>
     </nav>
-    <!-- 오른쪽에 로그인 버튼이 있어요 -->
-    <button class="login-btn">로그인</button>
+    <!-- 오른쪽에 챗봇 버튼과 로그인 버튼이 있어요 -->
+    <div class="header-buttons">
+      <!-- 챗봇 버튼 -->
+      <a href="https://chatgpt.com/g/g-6845bd255bf88191a7d86291b3b04127-akiaki-ilsig-annaeseo" target="_blank" class="header-chatbot-btn">
+        💬 AI챗봇
+      </a>
+      <!-- 로그인 버튼 -->
+      <button class="login-btn">로그인</button>
+    </div>
   </header>
   
   <!-- 히어로(캐러셀) 파트 시작 -->
